hphp/test/slow/unset/1120.php.expectf
Fatal error: You cannot use this syntax in an `unset()` expression. in %s/1120.php on line 5
